--- a/RayTraceAntiXray/pom.xml
+++ b/RayTraceAntiXray/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.vanillage.raytraceantixray</groupId>
     <artifactId>raytraceantixray-parent</artifactId>
-    <version>1.16.1</version>
+    <version>2</version>
   </parent>
   <artifactId>raytraceantixray</artifactId>
   <name>RayTraceAntiXray</name>
@@ -25,6 +25,14 @@
     <repository>
       <id>dmulloy2-repo</id>
       <url>https://repo.dmulloy2.net/repository/public/</url>
+    </repository>
+    <repository>
+        <id>codemc-releases</id>
+        <url>https://repo.codemc.io/repository/maven-releases/</url>
+    </repository>
+    <repository>
+        <id>codemc-snapshots</id>
+        <url>https://repo.codemc.io/repository/maven-snapshots/</url>
     </repository>
   </repositories>
   <pluginRepositories>
@@ -56,14 +64,14 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport</artifactId>
-      <version>4.1.115.Final</version>
+      <version>4.2.3.Final</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>5.3.0</version>
-      <scope>provided</scope>
+        <groupId>com.github.retrooper</groupId>
+        <artifactId>packetevents-spigot</artifactId>
+        <version>2.9.3</version>
+        <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
