--- a/RayTraceAntiXray/src/main/resources/plugin.yml
+++ b/RayTraceAntiXray/src/main/resources/plugin.yml
@@ -1,15 +1,40 @@
 name: RayTraceAntiXray
 main: com.vanillage.raytraceantixray.RayTraceAntiXray
-version: 1.16.1
+version: 2
 api-version: '1.21'
 description: Paper plugin for server-side async multithreaded ray tracing to hide ores that are exposed to air using Paper Anti-Xray engine-mode 1.
 load: STARTUP
 depend:
-- ProtocolLib
+- PacketEvents
 folia-supported: true
 commands:
   raytraceantixray:
-    description: All commands for RayTraceAntiXray.
-    usage: '§cUsage: /<command> timings (on|off)'
+    description: Main command for RayTraceAntiXray
+    usage: /<command> [reload|timings]
+    aliases: []
     permission: raytraceantixray.command.raytraceantixray
-    permission-message: §cYou don't have permissions.
+    permission-message: You do not have permission to use this command.
+    subcommands:
+      reload:
+        description: Reload the RayTraceAntiXray plugin
+        permission: raytraceantixray.reload
+      timings:
+        description: Enable or disable timings
+        permission: raytraceantixray.command.raytraceantixray.timings
+
+permissions:
+  raytraceantixray.command.raytraceantixray:
+    description: Allows use of the main RayTraceAntiXray command
+    default: true
+  raytraceantixray.reload:
+    description: Allows reloading the RayTraceAntiXray plugin
+    default: op
+  raytraceantixray.command.raytraceantixray.timings:
+    description: Allows use of the timings subcommand
+    default: op
+  raytraceantixray.command.raytraceantixray.timings.on:
+    description: Allows enabling timings
+    default: op
+  raytraceantixray.command.raytraceantixray.timings.off:
+    description: Allows disabling timings
+    default: op
