--- a/RayTraceAntiXray/pom.xml
+++ b/RayTraceAntiXray/pom.xml
@@ -70,11 +70,23 @@
     <dependency>
         <groupId>com.github.retrooper</groupId>
         <artifactId>packetevents-spigot</artifactId>
-        <version>2.9.3</version>
+        <version>2.9.4</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.github.retrooper</groupId>
+        <artifactId>packetevents-api</artifactId>
+        <version>2.9.4</version>
         <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
