--- a/RayTraceAntiXray/src/main/resources/plugin.yml
+++ b/RayTraceAntiXray/src/main/resources/plugin.yml
@@ -1,11 +1,11 @@
-name: RayTraceAntiXray
+name: ${project.name}
 main: com.vanillage.raytraceantixray.RayTraceAntiXray
-version: 2
+version: ${project.version}
 api-version: '1.21'
 description: Paper plugin for server-side async multithreaded ray tracing to hide ores that are exposed to air using Paper Anti-Xray engine-mode 1.
 load: STARTUP
-depend:
-- PacketEvents
+softdepend:
+  - PacketEvents
 folia-supported: true
 commands:
   raytraceantixray:
@@ -21,6 +21,9 @@ commands:
       timings:
         description: Enable or disable timings
         permission: raytraceantixray.command.raytraceantixray.timings
+      toggle:
+        description: Toggle ray tracing on or off
+        permission: raytraceantixray.command.raytraceantixray.toggle
 
 permissions:
   raytraceantixray.command.raytraceantixray:
@@ -37,4 +40,7 @@ permissions:
     default: op
   raytraceantixray.command.raytraceantixray.timings.off:
     description: Allows disabling timings
+    default: op
+  raytraceantixray.command.raytraceantixray.toggle:
+    description: Allows toggling ray tracing on or off
     default: op
